--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+asgiref==3.2.10
+Brotli==1.0.7
 dj-database-url==0.5.0
 Django==3.0.7
 django-crispy-forms==1.9.1
@@ -7,4 +9,3 @@ psycopg2==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
 whitenoise==5.1.0
-
